Fixed some layout bugs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -333,7 +333,10 @@ body {
         }
 
         .animal {
+            width: 100%;
+            box-sizing: border-box;
             justify-content: flex-start;
+            background-color: #181818;
             padding-top: 48px;
 
             &__name {
